--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,19 @@
+
+
 body, html {
     margin: 0;
     padding: 0;
+    font-family: MedievalSharp;
+    }
+
+
+:root{
+    background-image: url(https://img.freepik.com/foto-gratis/estufa-rustica-ladrillo-hornea-pan-casero-generado-ia_188544-27327.jpg?size=626&ext=jpg&ga=GA1.1.1880011253.1699660800&semt=ais);
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center center;
+    height: 100vh;
+    background-attachment: fixed;
 }
 
 h1{
@@ -8,18 +21,18 @@ h1{
     display: flex;
     justify-content: center;
     align-items: center;
-    color: white;
-    background-image: url(https://static.vecteezy.com/system/resources/thumbnails/034/751/280/small/tex-mex-mexican-cuisine-food-collage-mexico-meal-vector.jpg);
-    font-size: 4em;
+    color: gold;
+    
+    font-size: 6em;
     padding: 3%;
     -webkit-text-stroke: 2px darkred;
+    max-height: max(5vh, 200px);
 }
 
 ul{
-    
     margin: 0;
     padding-left: 0;
-    background-color: lightblue;
+    
 }
 
 li{
@@ -31,11 +44,14 @@ li{
 
 
 li:hover{
-    background-color: rgb(93, 184, 214);
-    border: 1px solid blue;
+    background: linear-gradient(to top, rgba(139, 56, 0, 0.7), rgba(0, 0, 0, 0));
+    opacity: 100%;
+    font-size: 4em;
+    border-bottom: solid rgb(182, 126, 23) 2px;
 }
 
 a{
-    text-decoration: none;
-    color: black;
+    text-decoration: none;    
+    color: gold;
+    -webkit-text-stroke: 1px darkred;
 }
